--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row p-5">
-        <h2 style="color: blueviolet;">Dashboard</h2>
+        <h2 style="color: rgb(128, 29, 221);">Dashboard</h2>
     </div>
 <div class="row mt-5">
     <div class="col-md-7 m-auto">
